--- a/app/src/main/res/layout/view_toolbar_live.xml
+++ b/app/src/main/res/layout/view_toolbar_live.xml
@@ -52,6 +52,7 @@
                 android:id="@+id/web_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_centerInParent="true"
                 android:visibility="gone" />
 
         </RelativeLayout>
