--- a/app/src/main/res/layout/home_game_table_item_4.xml
+++ b/app/src/main/res/layout/home_game_table_item_4.xml
@@ -300,7 +300,7 @@
         android:contentDescription="@null"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_inplay_v4"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_match_play_type_count"
         app:layout_constraintStart_toEndOf="@id/tv_match_time"
         app:layout_constraintTop_toTopOf="@+id/tv_match_play_type_count" />
@@ -309,7 +309,7 @@
         android:id="@+id/iv_match_price"
         android:layout_width="14dp"
         android:layout_height="14dp"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="10dp"
         android:contentDescription="@null"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_price_v4"
@@ -321,17 +321,27 @@
         android:id="@+id/iv_play"
         android:layout_width="14dp"
         android:layout_height="14dp"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="10dp"
         android:src="@drawable/ic_live_player"
         app:layout_constraintBottom_toBottomOf="@id/tv_match_play_type_count"
         app:layout_constraintStart_toEndOf="@id/iv_match_price"
+        app:layout_constraintTop_toTopOf="@id/tv_match_play_type_count" />
+
+    <ImageView
+        android:id="@+id/iv_animation"
+        android:layout_width="14dp"
+        android:layout_height="14dp"
+        android:layout_marginStart="10dp"
+        android:src="@drawable/ic_icon_game_schedule"
+        app:layout_constraintBottom_toBottomOf="@id/tv_match_play_type_count"
+        app:layout_constraintStart_toEndOf="@id/iv_play"
         app:layout_constraintTop_toTopOf="@id/tv_match_play_type_count" />
 
     <TextView
         android:id="@+id/tv_match_play_type_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="8dp"
         android:drawablePadding="6dp"
@@ -340,7 +350,7 @@
         android:textStyle="bold"
         app:drawableRightCompat="@drawable/ic_iconarrow"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/iv_play"
+        app:layout_constraintStart_toEndOf="@id/iv_animation"
         app:layout_constraintTop_toBottomOf="@+id/table_match_info_border"
         tools:text="54" />
 
