--- a/app/src/main/res/layout/itemview_league_v5.xml
+++ b/app/src/main/res/layout/itemview_league_v5.xml
@@ -3,31 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <View
-        android:id="@+id/league_border"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:background="@color/colorWhite4"
-        app:layout_constraintTop_toTopOf="parent" />
+    android:layout_height="wrap_content"
+    tools:ignore="SpUsage,ContentDescription,WebViewLayout">
 
     <TextView
         android:id="@+id/league_text"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="4dp"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:background="@color/colorWhite4"
         android:ellipsize="end"
+        android:gravity="center_vertical"
         android:maxLines="2"
+        android:paddingStart="16dp"
+        android:paddingEnd="34dp"
+        android:textAllCaps="true"
         android:textColor="#202020"
         android:textSize="@dimen/textSize16sp"
         android:textStyle="bold"
-        android:textAllCaps="true"
-        app:layout_constraintBottom_toBottomOf="@id/league_border"
-        app:layout_constraintEnd_toStartOf="@id/iv_country"
-        app:layout_constraintStart_toStartOf="@id/league_border"
-        app:layout_constraintTop_toTopOf="@id/league_border"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="欧洲足球锦标赛2020" />
 
     <ImageView
@@ -37,25 +30,24 @@
         android:layout_marginEnd="10dp"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_earth"
-        app:layout_constraintBottom_toBottomOf="@id/league_border"
+        app:layout_constraintBottom_toBottomOf="@id/league_text"
         app:layout_constraintEnd_toStartOf="@+id/iv_refresh"
-        app:layout_constraintTop_toTopOf="@id/league_border"
-        tools:ignore="WebViewLayout" />
+        app:layout_constraintTop_toTopOf="@id/league_text" />
 
     <ImageView
         android:id="@+id/iv_refresh"
         android:layout_width="34dp"
         android:layout_height="0dp"
-        android:paddingEnd="16dp"
         android:paddingStart="0dp"
         android:paddingTop="20dp"
+        android:paddingEnd="16dp"
         android:paddingBottom="20dp"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_refresh_gray"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/league_border"
-        app:layout_constraintEnd_toEndOf="@id/league_border"
-        app:layout_constraintTop_toTopOf="@id/league_border"
+        app:layout_constraintBottom_toBottomOf="@id/league_text"
+        app:layout_constraintEnd_toEndOf="@id/league_text"
+        app:layout_constraintTop_toTopOf="@id/league_text"
         tools:ignore="WebViewLayout" />
 
     <androidx.recyclerview.widget.RecyclerView
@@ -64,11 +56,12 @@
         android:layout_height="wrap_content"
         android:nestedScrollingEnabled="false"
         android:overScrollMode="never"
+        app:layout_constraintTop_toBottomOf="@id/league_text"
         tools:itemCount="1"
-        tools:listitem="@layout/itemview_league_odd_v4"
-        app:layout_constraintTop_toBottomOf="@id/league_border"/>
+        tools:listitem="@layout/itemview_league_odd_v5" />
 
-    <View android:id="@+id/SpaceItemDecorationView"
+    <View
+        android:id="@+id/SpaceItemDecorationView"
         android:layout_width="match_parent"
         android:layout_height="8dp"
         android:background="@color/colorWhite"
