--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -94,6 +94,9 @@
     <color name="color_D65752">#D65752</color>
     <color name="color_F9DDDE">#F9DDDE</color>
     <color name="color_FFE136">#FFE136</color>
+    <color name="color_B3000000">#B3000000</color>
+
+
     <!-- ======================================= -->
 
 </resources>
