--- a/app/src/main/res/layout/activity_game_publicity.xml
+++ b/app/src/main/res/layout/activity_game_publicity.xml
@@ -14,12 +14,12 @@
         tools:ignore="SpUsage">
 
         <!-- toolBar -->
-        <include
-            android:id="@+id/publicityToolbar"
-            layout="@layout/view_toolbar_publicity"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/tool_bar_height"
-            app:layout_constraintTop_toTopOf="parent" />
+<!--        <include-->
+<!--            android:id="@+id/publicityToolbar"-->
+<!--            layout="@layout/view_toolbar_publicity"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="@dimen/tool_bar_height"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/publicityContainer"
@@ -27,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@id/viewBottom"
-            app:layout_constraintTop_toBottomOf="@id/publicityToolbar"
+            app:layout_constraintTop_toTopOf="parent"
             app:navGraph="@navigation/publicity_navigation"
             tools:layout="@layout/fragment_publicity" />
 
