--- a/app/src/main/res/layout/fragment_publicity.xml
+++ b/app/src/main/res/layout/fragment_publicity.xml
@@ -4,11 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvPublicity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorWhite"
         android:overScrollMode="never" />
+
+    <include
+        android:id="@+id/publicityToolbar"
+        layout="@layout/view_toolbar_publicity"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/tool_bar_height"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
