--- a/app/src/main/res/layout/activity_game_publicity.xml
+++ b/app/src/main/res/layout/activity_game_publicity.xml
@@ -14,12 +14,12 @@
         tools:ignore="SpUsage">
 
         <!-- toolBar -->
-<!--        <include-->
-<!--            android:id="@+id/publicityToolbar"-->
-<!--            layout="@layout/view_toolbar_publicity"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="@dimen/tool_bar_height"-->
-<!--            app:layout_constraintTop_toTopOf="parent" />-->
+        <include
+            android:id="@+id/publicityToolbar"
+            layout="@layout/view_toolbar_publicity"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/tool_bar_height"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.fragment.app.FragmentContainerView
             android:id="@+id/publicityContainer"
