--- a/app/src/main/res/layout/activity_game_publicity.xml
+++ b/app/src/main/res/layout/activity_game_publicity.xml
@@ -27,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toTopOf="@id/viewBottom"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/publicityToolbar"
             app:navGraph="@navigation/publicity_navigation"
             tools:layout="@layout/fragment_publicity" />
 
