--- a/app/src/main/res/layout/dialog_register_success.xml
+++ b/app/src/main/res/layout/dialog_register_success.xml
@@ -88,6 +88,7 @@
                 android:text="@string/register_recharge_now"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/textSize17sp"
+                android:textAllCaps="false"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/clAgreement" />
 
