[調整] 隱藏宣傳頁賽事類別(藍色橘色的那條)

--- a/app/src/main/res/layout/item_publicity_recommend.xml
+++ b/app/src/main/res/layout/item_publicity_recommend.xml
@@ -8,6 +8,7 @@
 
     <include
         android:id="@+id/gameTypeView"
+        android:visibility="gone"
         layout="@layout/publicity_game_type_view" />
 
     <include
