--- a/app/src/main/res/layout/fragment_game_outright_more.xml
+++ b/app/src/main/res/layout/fragment_game_outright_more.xml
@@ -123,6 +123,14 @@
                 tools:itemCount="3"
                 tools:listitem="@layout/itemview_outright_odd_v4" />
 
+            <include
+                layout="@layout/view_bottom_navigation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/outright_more_odd_list" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
