[修正] 賽事資訊時間排版

--- a/app/src/main/res/layout/itemview_league_odd_v5.xml
+++ b/app/src/main/res/layout/itemview_league_odd_v5.xml
@@ -78,7 +78,7 @@
                     android:id="@+id/league_odd_match_status"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="6dp"
+                    android:paddingEnd="6dp"
                     android:textColor="@color/colorGray"
                     android:textSize="@dimen/textSize12sp"
                     tools:text="比赛延期" />
@@ -87,7 +87,7 @@
                     android:id="@+id/league_odd_spt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="6dp"
+                    android:paddingEnd="6dp"
                     android:textColor="@color/colorGray"
                     android:textSize="@dimen/textSize12sp"
                     android:visibility="gone"
@@ -98,7 +98,7 @@
                     android:id="@+id/league_odd_match_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="2dp"
+                    android:paddingEnd="6dp"
                     android:textColor="@color/colorGray"
                     android:textSize="@dimen/textSize12sp"
                     tools:text="00:43" />
@@ -107,7 +107,7 @@
                     android:id="@+id/league_odd_match_remain_time_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="10dp"
+                    android:layout_marginStart="6dp"
                     android:src="@drawable/ic_inplay_v4"
                     android:visibility="gone"
                     tools:ignore="ContentDescription"
