[移除] WebView滾動(漣漪)效果

--- a/app/src/main/res/layout/dialog_bottom_sheet_webview.xml
+++ b/app/src/main/res/layout/dialog_bottom_sheet_webview.xml
@@ -46,6 +46,7 @@
     <WebView
         android:id="@+id/bottom_sheet_web_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:overScrollMode="never"/>
 
 </LinearLayout>
