--- a/app/src/main/res/layout/activity_third_game.xml
+++ b/app/src/main/res/layout/activity_third_game.xml
@@ -6,7 +6,8 @@
     <WebView
         android:id="@+id/web_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:overScrollMode="never"/>
 
     <org.cxct.sportlottery.ui.thirdGame.MotionFloatingMenu
         android:id="@+id/motion_menu"
