--- a/app/src/main/res/layout/publicity_title_view.xml
+++ b/app/src/main/res/layout/publicity_title_view.xml
@@ -3,19 +3,20 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    tools:ignore="UseCompoundDrawables">
 
 
     <com.youth.banner.Banner
         android:id="@+id/banner"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:banner_loop_time="3000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="375:310"
-        app:banner_loop_time="3000"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <include
         android:id="@+id/publicityToolbar"
@@ -24,63 +25,90 @@
         android:layout_height="@dimen/tool_bar_height"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="wrap_content"
+        android:background="@color/color_B3000000"
+        android:minHeight="60dp"
         app:layout_constraintBottom_toBottomOf="@+id/banner"
-        android:background="@color/color_B3000000">
+        app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical"
-            android:layout_weight="1">
+            android:paddingStart="4dp"
+            android:paddingEnd="4dp">
+
             <ImageView
                 android:layout_width="@dimen/margin_18"
                 android:layout_height="@dimen/margin_18"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="2dp"
                 android:src="@drawable/ic_icon_events" />
+
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:text="@string/recommend_match"/>
+                android:layout_marginTop="4dp"
+                android:gravity="center"
+                android:text="@string/recommend_match"
+                android:textColor="@color/white" />
 
         </LinearLayout>
+
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical"
-            android:layout_weight="1">
+            android:paddingStart="4dp"
+            android:paddingEnd="4dp">
+
             <ImageView
                 android:layout_width="@dimen/margin_18"
                 android:layout_height="@dimen/margin_18"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="2dp"
                 android:src="@drawable/ic_icon_odds" />
+
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:text="@string/recommend_best_odd"/>
+                android:layout_marginTop="4dp"
+                android:gravity="center"
+                android:text="@string/recommend_best_odd"
+                android:textColor="@color/white" />
         </LinearLayout>
+
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:gravity="center"
             android:orientation="vertical"
-            android:layout_weight="1">
+            android:paddingStart="4dp"
+            android:paddingEnd="4dp">
+
             <ImageView
                 android:layout_width="@dimen/margin_18"
                 android:layout_height="@dimen/margin_18"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="2dp"
                 android:src="@drawable/ic_icon_safe" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:text="@string/recommend_safe"/>
-        </LinearLayout>
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:gravity="center"
+                android:text="@string/recommend_safe"
+                android:textColor="@color/white" />
+        </LinearLayout>
 
 
     </LinearLayout>
