--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <!-- [Start]重新配置的色彩架構 -->
+
+    <!--以下部分，是系统中的基礎色 黑夜白天所有色都必須在此基礎色中建立 -->
+    <!--統一在此建立 也可以避免建立相同的色碼 也可以直接搜尋色碼 找到顏色-->
+
+    <color name="color_171717">#171717</color>
+    <color name="color_f5f8fd">#f5f8fd</color>
+    <color name="color_262626">#262626</color>
+    <color name="color_edf4ff">#edf4ff</color>
+    <color name="color_0C2040">#0C2040</color>
+    <color name="color_a9bedf">#a9bedf</color>
+    <color name="color_317FFF">#317FFF</color>
+    <color name="color_1463cf">#1463cf</color>
+    <color name="color_1053af">#1053af</color>
+    <color name="color_FF9E3C">#FF9E3C</color>
+    <color name="color_ff9e3c">#ff9e3c</color>
+    <color name="color_FF9143">#FF9143</color>
+    <color name="color_ff9200">#ff9200</color>
+    <color name="color_cb7c2e">#cb7c2e</color>
+    <color name="color_08dc6e">#08dc6e</color>
+    <color name="color_0ed290">#0ed290</color>
+    <color name="color_34CB8A">#34CB8A</color>
+    <color name="color_3db893">#3db893</color>
+    <color name="color_e7837c">#e7837c</color>
+    <color name="color_E44438">#E44438</color>
+    <color name="color_ce3636">#ce3636</color>
+    <color name="color_F75452">#F75452</color>
+    <color name="color_b73a20">#b73a20</color>
+    <color name="color_FFFFFF">#FFFFFF</color>
+    <color name="color_191919">#191919</color>
+    <color name="color_FCFCFC">#FCFCFC</color>
+    <color name="color_141414">#141414</color>
+    <color name="color_F3F4F5">#F3F4F5</color>
+    <color name="color_f3f3f3">#f3f3f3</color>
+    <color name="color_242424">#242424</color>
+    <color name="color_f2f2f2">#f2f2f2</color>
+    <color name="color_212121">#212121</color>
+    <color name="color_eeeeee">#eeeeee</color>
+    <color name="color_ededed">#ededed</color>
+    <color name="color_1F1F1F">#1F1F1F</color>
+    <color name="color_e6e6e6">#e6e6e6</color>
+    <color name="color_2B2B2B">#2B2B2B</color>
+    <color name="color_e2e2e2">#e2e2e2</color>
+    <color name="color_303030">#303030</color>
+    <color name="color_dddddd">#dddddd</color>
+    <color name="color_404040">#404040</color>
+    <color name="color_cccccc">#cccccc</color>
+    <color name="color_666666">#666666</color>
+    <color name="color_bcbcbc">#bcbcbc</color>
+    <color name="color_616161">#616161</color>
+    <color name="color_b4b4b4">#b4b4b4</color>
+    <color name="color_8F8F8F">#8F8F8F</color>
+    <color name="color_A3A3A3">#A3A3A3</color>
+    <color name="color_ADADAD">#ADADAD</color>
+    <color name="color_444444">#444444</color>
+    <color name="color_E0E0E0">#E0E0E0</color>
+    <color name="color_e5e5e5">#e5e5e5</color>
+    <color name="color_000000">#000000</color>
+    <color name="color_333333">#333333</color>
+
+
+    <!--以下部分，是系统中的白天的色值 -->
+
+    <color name="color_171717_f5f8fd">@color/color_171717</color>
+    <color name="color_262626_f5f8fd">@color/color_262626</color>
+    <color name="color_0C2040_a9bedf">@color/color_0C2040</color>
+    <color name="color_317FFF_1463cf">@color/color_317FFF</color>
+    <color name="color_317FFF_1053af">@color/color_317FFF</color>
+    <color name="color_FF9E3C_FF9E3C">@color/color_FF9E3C</color>
+    <color name="color_FF9143_ff9200">@color/color_FF9143</color>
+    <color name="color_FF9143_cb7c2e">@color/color_FF9143</color>
+    <color name="color_08dc6e_08dc6e">@color/color_08dc6e</color>
+    <color name="color_0ed290_0ed290">@color/color_0ed290</color>
+    <color name="color_34CB8A_3db893">@color/color_34CB8A</color>
+    <color name="color_FF9E3C_e7837c">@color/color_FF9E3C</color>
+    <color name="color_E44438_e44438">@color/color_E44438</color>
+    <color name="color_ce3636_ce3636">@color/color_ce3636</color>
+    <color name="color_F75452_b73a20">@color/color_F75452</color>
+    <color name="color_FFFFFF_FFFFFF">@color/color_FFFFFF</color>
+    <color name="color_191919_FCFCFC">@color/color_191919</color>
+    <color name="color_141414_F3F4F5">@color/color_141414</color>
+    <color name="color_141414_f3f3f3">@color/color_141414</color>
+    <color name="color_242424_f2f2f2">@color/color_242424</color>
+    <color name="color_212121_eeeeee">@color/color_212121</color>
+    <color name="color_212121_ededed">@color/color_212121</color>
+    <color name="color_1F1F1F_e6e6e6">@color/color_1F1F1F</color>
+    <color name="color_2B2B2B_e2e2e2">@color/color_2B2B2B</color>
+    <color name="color_303030_dddddd">@color/color_303030</color>
+    <color name="color_404040_cccccc">@color/color_404040</color>
+    <color name="color_666666_bcbcbc">@color/color_666666</color>
+    <color name="color_616161_b4b4b4">@color/color_616161</color>
+    <color name="color_8F8F8F_999999">@color/color_8F8F8F</color>
+    <color name="color_A3A3A3_666666">@color/color_A3A3A3</color>
+    <color name="color_ADADAD_444444">@color/color_ADADAD</color>
+    <color name="color_E0E0E0_404040">@color/color_E0E0E0</color>
+    <color name="color_e5e5e5_333333">@color/color_e5e5e5</color>
+    <color name="color_FFFFFF_000000">@color/color_FFFFFF</color>
+
+
+
+    <!-- [End]重新配置的色彩架構 -->
+
+
     <!-- ========== color guideline ========== -->
     <color name="colorBackground">@color/colorWhite1</color>
 
@@ -78,7 +182,6 @@
 
     <color name="color_fff3f3f3">#fff3f3f3</color>
     <color name="color_ffededed">#ffededed</color>
-    <color name="color_333333">#333333</color>
     <color name="color_888888">#888888</color>
     <color name="color_999999">#999999</color>
     <color name="color_AAAAAA">#AAAAAA</color>
@@ -96,7 +199,7 @@
     <color name="color_FFE136">#FFE136</color>
     <color name="color_B3000000">#B3000000</color>
 
-
     <!-- ======================================= -->
+
 
 </resources>
