--- a/app/src/main/res/layout/itemview_sport_type_list.xml
+++ b/app/src/main/res/layout/itemview_sport_type_list.xml
@@ -6,6 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:orientation="horizontal"
-    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     tools:itemCount="4"
     tools:listitem="@layout/itemview_sport_type_v4" />
