持續更新夜間模式UI

--- a/app/src/main/res/drawable/bg_radius_8_white_top_only.xml
+++ b/app/src/main/res/drawable/bg_radius_8_white_top_only.xml
@@ -39,7 +39,7 @@
     <!-- Background -->
     <item>
         <shape>
-            <solid android:color="#F3F4F5" />
+            <solid android:color="@color/color_141414_F3F4F5" />
             <corners android:topLeftRadius="8dp" android:topRightRadius="8dp"
                 android:bottomLeftRadius="0dp" android:bottomRightRadius="0dp"/>
         </shape>
