--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -43,7 +43,6 @@
     <color name="color_1F1F1F">#1F1F1F</color>
     <color name="color_e6e6e6">#e6e6e6</color>
     <color name="color_2B2B2B">#2B2B2B</color>
-    <color name="color_e2e2e2">#e2e2e2</color>
     <color name="color_303030">#303030</color>
     <color name="color_dddddd">#dddddd</color>
     <color name="color_404040">#404040</color>
@@ -65,7 +64,8 @@
     <color name="color_999999">#999999</color>
     <color name="color_1F4780">#1F4780</color>
     <color name="color_CAE0FF">#CAE0FF</color>
-
+    <color name="color_E2E2E2">#E2E2E2</color>
+    <color name="color_1D4C99">#1D4C99</color>
 
     <!--以下部分，是系统中的白天的色值 -->
     <!--命名規則，color_[夜間色碼]_[白天色碼] -->
@@ -75,8 +75,9 @@
     <color name="color_0C2040_a9bedf">@color/color_a9bedf</color>
     <color name="color_317FFF_1463cf">@color/color_1463cf</color>
     <color name="color_317FFF_1053af">@color/color_1053af</color>
-    <color name="color_317FFF_0760D4">@color/color_0760D4</color>
+    <color name="color_1D4C99_0760D4">@color/color_0760D4</color>
     <color name="color_317FFF_1F4780">@color/color_1F4780</color>
+    <color name="color_317FFF_0760D4">@color/color_0760D4</color>
 
     <color name="color_FF9E3C_FF9E3C">@color/color_FF9E3C</color>
     <color name="color_FF9143_ff9200">@color/color_ff9200</color>
@@ -91,7 +92,7 @@
     <color name="color_FFFFFF_FFFFFF">@color/color_FFFFFF</color>
     <color name="color_191919_FCFCFC">@color/color_FCFCFC</color>
     <color name="color_CAE0FF_FCFCFC">@color/color_FCFCFC</color>
-
+    <color name="color_317FFF_666666">@color/color_666666</color>
     <color name="color_191919_EEEFF0">@color/color_EEEFF0</color>
     <color name="color_191919_DFEAF8">@color/color_DFEAF8</color>
     <color name="color_141414_F3F4F5">@color/color_F3F4F5</color>
@@ -100,7 +101,7 @@
     <color name="color_212121_eeeeee">@color/color_eeeeee</color>
     <color name="color_212121_ededed">@color/color_ededed</color>
     <color name="color_1F1F1F_e6e6e6">@color/color_e6e6e6</color>
-    <color name="color_2B2B2B_e2e2e2">@color/color_e2e2e2</color>
+    <color name="color_2B2B2B_e2e2e2">@color/color_E2E2E2</color>
     <color name="color_303030_dddddd">@color/color_dddddd</color>
     <color name="color_404040_cccccc">@color/color_cccccc</color>
     <color name="color_666666_bcbcbc">@color/color_bcbcbc</color>
@@ -111,9 +112,7 @@
     <color name="color_E0E0E0_404040">@color/color_404040</color>
     <color name="color_e5e5e5_333333">@color/color_333333</color>
     <color name="color_FFFFFF_000000">@color/color_000000</color>
-
-
-
+    <color name="color_000000_FFFFFF">@color/color_FFFFFF</color>
     <!-- [End]重新配置的色彩架構 -->
 
 
@@ -199,7 +198,6 @@
 <!--    <color name="color_999999">#999999</color>-->
 <!--    <color name="color_AAAAAA">#AAAAAA</color>-->
     <color name="color_FDFDFD">#FDFDFD</color>
-    <color name="color_E2E2E2">#E2E2E2</color>
     <color name="color_FFFFFFFF">#ffffffff</color>
     <color name="color_FFEEEFF0">#ffeeeff0</color>
     <color name="color_F08E29">#ffF08E29</color>
