--- a/app/src/main/res/drawable/bg_bottom_nav_bar.xml
+++ b/app/src/main/res/drawable/bg_bottom_nav_bar.xml
@@ -11,7 +11,7 @@
             <solid android:color="@android:color/transparent" />
             <stroke
                 android:width="1px"
-                android:color="#dddddd" />
+                android:color="@color/color_303030_dddddd" />
         </shape>
     </item>
 
