--- a/app/src/main/res/drawable/bg_bounds_edittext_h.xml
+++ b/app/src/main/res/drawable/bg_bounds_edittext_h.xml
@@ -4,7 +4,7 @@
         <shape android:shape="rectangle">
             <corners android:radius="8dp" />
             <solid android:color="#ffffffff"/>
-            <stroke android:color="#1053AF"
+            <stroke android:color="@color/color_317FFF_1053af"
                 android:width="1dp"/>
         </shape>
     </item>
