--- a/app/src/main/res/drawable/bg_radius_4_button_1053af.xml
+++ b/app/src/main/res/drawable/bg_radius_4_button_1053af.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="4dp" />
-    <solid android:color="#1053af" />
+    <solid android:color="@color/color_317FFF_1053af" />
 </shape>
