--- a/app/src/main/res/drawable/bg_square_shape_5dp_crypto_pay_screen_shot.xml
+++ b/app/src/main/res/drawable/bg_square_shape_5dp_crypto_pay_screen_shot.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="5dp" />
-    <solid android:color="#F5F8FD"/>
+    <solid android:color="@color/color_171717_f5f8fd"/>
 </shape>
