--- a/app/src/main/res/layout/activity_profile_center.xml
+++ b/app/src/main/res/layout/activity_profile_center.xml
@@ -22,11 +22,10 @@
             android:layout_height="0dp"
             android:paddingStart="20dp"
             android:paddingEnd="10dp"
-            android:src="@drawable/ic_icon_arrow_blue"
+            android:src="@drawable/ic_icon_arrow"
             app:layout_constraintBottom_toBottomOf="@id/iv_head"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/iv_head"
-            app:tint="@color/color_317FFF_0760D4" />
+            app:layout_constraintTop_toTopOf="@id/iv_head" />
 
         <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/iv_head"
@@ -113,7 +112,7 @@
             android:layout_marginStart="12dp"
             android:gravity="center_vertical"
             android:text="@string/account_balance"
-            android:textColor="@color/color_191919_FCFCFC"
+            android:textColor="@color/color_FFFFFF_FFFFFF"
             android:textSize="@dimen/textSize12sp" />
 
         <TextView
@@ -123,7 +122,7 @@
             android:layout_marginStart="20dp"
             android:gravity="center_vertical"
             android:maxWidth="180dp"
-            android:textColor="@color/color_191919_FCFCFC"
+            android:textColor="@color/color_FFFFFF_FFFFFF"
             android:textSize="@dimen/textSize20sp"
             android:textStyle="bold"
             app:autoSizeMaxTextSize="20dp"
@@ -138,7 +137,7 @@
             android:layout_marginStart="5dp"
             android:layout_marginEnd="5dp"
             android:gravity="center_vertical"
-            android:textColor="@color/color_191919_FCFCFC"
+            android:textColor="@color/color_FFFFFF_FFFFFF"
             android:textSize="@dimen/textSize18sp"
             tools:text="PHP" />
 
@@ -150,7 +149,7 @@
             android:contentDescription="@null"
             android:padding="6dp"
             android:src="@drawable/ic_info_white_inside"
-            android:tint="@color/white"
+            app:tint="@color/color_FFFFFF_FFFFFF"
             android:visibility="gone"
             tools:visibility="visible" />
 
@@ -189,6 +188,7 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:minHeight="60dp"
+            android:background="@color/color_191919_FCFCFC"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -196,7 +196,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@null"
+                android:background="@color/color_191919_FCFCFC"
                 android:elevation="5dp"
                 android:gravity="center"
                 android:orientation="horizontal">
@@ -221,14 +221,14 @@
             <View
                 android:layout_width="1dp"
                 android:layout_height="25dp"
-                android:background="@color/color_191919_EEEFF0" />
+                android:background="@color/color_2B2B2B_e2e2e2" />
 
             <LinearLayout
                 android:id="@+id/btn_withdraw"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@null"
+                android:background="@color/color_191919_FCFCFC"
                 android:gravity="center"
                 android:orientation="horizontal">
 
@@ -312,8 +312,7 @@
                         android:layout_marginEnd="10dp"
                         android:contentDescription="@null"
                         android:rotationY="180"
-                        android:src="@drawable/ic_icon_arrow_blue"
-                        app:tint="@color/color_E2E2E2" />
+                        android:src="@drawable/ic_icon_arrow" />
 
                 </LinearLayout>
 
@@ -348,8 +347,7 @@
                         android:layout_marginEnd="10dp"
                         android:contentDescription="@null"
                         android:rotationY="180"
-                        android:src="@drawable/ic_icon_arrow_blue"
-                        app:tint="@color/color_E2E2E2" />
+                        android:src="@drawable/ic_icon_arrow" />
 
                 </LinearLayout>
 
@@ -384,8 +382,7 @@
                         android:layout_marginEnd="10dp"
                         android:contentDescription="@null"
                         android:rotationY="180"
-                        android:src="@drawable/ic_icon_arrow_blue"
-                        app:tint="@color/color_E2E2E2" />
+                        android:src="@drawable/ic_icon_arrow" />
 
                 </LinearLayout>
 
@@ -420,8 +417,7 @@
                         android:layout_marginEnd="10dp"
                         android:contentDescription="@null"
                         android:rotationY="180"
-                        android:src="@drawable/ic_icon_arrow_blue"
-                        app:tint="@color/color_E2E2E2" />
+                        android:src="@drawable/ic_icon_arrow" />
 
                 </LinearLayout>
 
@@ -490,8 +486,7 @@
                         android:layout_marginEnd="10dp"
                         android:contentDescription="@null"
                         android:rotationY="180"
-                        android:src="@drawable/ic_icon_arrow_blue"
-                        app:tint="@color/color_E2E2E2" />
+                        android:src="@drawable/ic_icon_arrow" />
 
                 </LinearLayout>
 
@@ -532,8 +527,7 @@
                         android:layout_marginEnd="10dp"
                         android:contentDescription="@null"
                         android:rotationY="180"
-                        android:src="@drawable/ic_icon_arrow_blue"
-                        app:tint="@color/color_E2E2E2" />
+                        android:src="@drawable/ic_icon_arrow" />
 
                 </LinearLayout>
 
@@ -568,8 +562,7 @@
                         android:layout_marginEnd="10dp"
                         android:contentDescription="@null"
                         android:rotationY="180"
-                        android:src="@drawable/ic_icon_arrow_blue"
-                        app:tint="@color/color_E2E2E2" />
+                        android:src="@drawable/ic_icon_arrow" />
 
                 </LinearLayout>
 
@@ -604,8 +597,7 @@
                         android:layout_marginEnd="10dp"
                         android:contentDescription="@null"
                         android:rotationY="180"
-                        android:src="@drawable/ic_icon_arrow_blue"
-                        app:tint="@color/color_E2E2E2" />
+                        android:src="@drawable/ic_icon_arrow" />
 
                 </LinearLayout>
 
@@ -682,8 +674,7 @@
                         android:layout_marginEnd="10dp"
                         android:contentDescription="@null"
                         android:rotationY="180"
-                        android:src="@drawable/ic_icon_arrow_blue"
-                        app:tint="@color/color_E2E2E2" />
+                        android:src="@drawable/ic_icon_arrow" />
 
                 </LinearLayout>
 
@@ -718,8 +709,7 @@
                         android:layout_marginEnd="10dp"
                         android:contentDescription="@null"
                         android:rotationY="180"
-                        android:src="@drawable/ic_icon_arrow_blue"
-                        app:tint="@color/color_E2E2E2" />
+                        android:src="@drawable/ic_icon_arrow" />
 
                 </LinearLayout>
 
@@ -731,7 +721,7 @@
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="20dp"
                     android:background="@drawable/bg_radius_20_button_white6"
-                    android:backgroundTint="@color/color_E2E2E2"
+                    android:backgroundTint="@color/color_2B2B2B_e2e2e2"
                     android:minHeight="42dp"
                     android:text="@string/sign_out"
                     android:textColor="@color/color_A3A3A3_666666"
