--- a/app/src/main/res/layout/activity_switch_language.xml
+++ b/app/src/main/res/layout/activity_switch_language.xml
@@ -90,6 +90,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/language_en"
+                android:textColor="@color/color_e5e5e5_333333"
                 android:textSize="@dimen/textSize14sp" />
 
             <ImageView
@@ -117,6 +118,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:textColor="@color/color_e5e5e5_333333"
                 android:text="@string/language_cn"
                 android:textSize="@dimen/textSize14sp" />
 
@@ -143,6 +145,7 @@
             <TextView
                 android:id="@+id/tvVietnam"
                 android:layout_width="0dp"
+                android:textColor="@color/color_e5e5e5_333333"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/language_vi"
