--- a/app/src/main/res/layout/content_left_menu_item.xml
+++ b/app/src/main/res/layout/content_left_menu_item.xml
@@ -73,6 +73,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:visibility="gone"
-        android:background="@color/color_E2E2E2" />
+        android:background="@color/color_2B2B2B_e2e2e2" />
 
 </LinearLayout>
