--- a/app/src/main/res/layout/content_left_menu_item_header.xml
+++ b/app/src/main/res/layout/content_left_menu_item_header.xml
@@ -40,7 +40,7 @@
         android:layout_height="1dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:background="@color/color_E2E2E2" />
+        android:background="@color/color_2B2B2B_e2e2e2" />
 
     <LinearLayout
         android:id="@+id/tv_recharge"
@@ -164,7 +164,7 @@
         android:layout_height="1dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:background="@color/color_E2E2E2" />
+        android:background="@color/color_2B2B2B_e2e2e2" />
 
     <LinearLayout
         android:id="@+id/ct_inplay"
@@ -239,6 +239,6 @@
         android:layout_height="1dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:background="@color/color_E2E2E2" />
+        android:background="@color/color_2B2B2B_e2e2e2" />
 
 </LinearLayout>
