--- a/app/src/main/res/layout/dialog_security_deposit.xml
+++ b/app/src/main/res/layout/dialog_security_deposit.xml
@@ -54,7 +54,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="22dp"
-            android:background="@color/color_E2E2E2"
+            android:background="@color/color_2B2B2B_e2e2e2"
             app:layout_constraintTop_toBottomOf="@id/tvDaysLeft" />
 
         <TextView
