--- a/app/src/main/res/layout/dialog_selector_dialog.xml
+++ b/app/src/main/res/layout/dialog_selector_dialog.xml
@@ -66,7 +66,7 @@
             android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/color_E2E2E2"
+            android:background="@color/color_2B2B2B_e2e2e2"
             app:layout_constraintBottom_toTopOf="@id/block_bottom_bar"
             app:layout_constraintTop_toBottomOf="@id/sv_block_content"
             app:layout_constraintVertical_bias="1" />
@@ -100,7 +100,7 @@
                 android:id="@+id/view_line"
                 android:layout_width="1dp"
                 android:layout_height="44dp"
-                android:background="@color/color_E2E2E2" />
+                android:background="@color/color_2B2B2B_e2e2e2" />
 
             <Button
                 android:id="@+id/btn_positive"
