--- a/app/src/main/res/layout/view_no_record.xml
+++ b/app/src/main/res/layout/view_no_record.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    android:background="@android:color/white">
+    android:background="@color/color_141414_F3F4F5"
+    >
 
     <ImageView
         android:id="@+id/list_no_record_img"
