[Fix] home ui with horizontal scroll

--- a/app/src/main/res/layout/itemview_sport_type_list.xml
+++ b/app/src/main/res/layout/itemview_sport_type_list.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rvSportType"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:orientation="horizontal"
-    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-    tools:itemCount="4"
-    tools:listitem="@layout/itemview_sport_type_v4" />
+    android:layout_height="60dp">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvSportType"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:orientation="horizontal"
+        android:paddingHorizontal="13dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:itemCount="4"
+        tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:listitem="@layout/itemview_sport_type_v4" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
+
