--- a/app/src/main/res/layout/itemview_sport_type_v4.xml
+++ b/app/src/main/res/layout/itemview_sport_type_v4.xml
@@ -3,14 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:minWidth="64dp"
-    android:layout_height="56dp">
+    android:layout_height="60dp"
+    android:minWidth="70dp"
+    tools:ignore="SpUsage">
 
     <ImageView
         android:id="@+id/sport_type_home_img"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="12dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toTopOf="@id/sport_type_home_text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,7 +24,7 @@
         android:id="@+id/sport_type_home_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="2dp"
+        android:layout_marginTop="6dp"
         android:textColor="@color/selector_sport_type_item_text_v4"
         android:textSize="@dimen/textSize12sp"
         app:layout_constraintBottom_toBottomOf="parent"
